Fix logo visible, layout and path

--- a/src/routes/navigation/navigation.module.scss
+++ b/src/routes/navigation/navigation.module.scss
@@ -19,8 +19,9 @@
   background-color: white;
 
   .navLink {
-    width: 175px;
-    height: 125px;
+    width: 210px;
+    height: auto;
+    object-fit: cover;
 
     .navLogo {
       width: 100%;
